[Feat] DTO TimeUtils 적용 - trip
변경 요소
`#` TimeSchedule -> TimeScheduleDTO
`#` LocalDateTime -> String

(cherry picked from commit 811d88330792449da46348e48740c7d62f94fcc9)