@@ -4,48 +4,44 @@ import com.example.kdt_y_be_toy_project2.domain.itinerary.dto.ItineraryResponse;
 import com.example.kdt_y_be_toy_project2.domain.itinerary.entity.Itinerary;
 import com.example.kdt_y_be_toy_project2.domain.trip.entity.Trip;
 import com.example.kdt_y_be_toy_project2.domain.trip.entity.TripDestinationEnum;
-import com.example.kdt_y_be_toy_project2.global.entity.TimeSchedule;
+import com.example.kdt_y_be_toy_project2.global.dto.TimeScheduleDTO;
+import com.example.kdt_y_be_toy_project2.global.util.TimeUtils;
 import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.validation.constraints.NotNull;
+import jakarta.validation.constraints.Positive;
 
-import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class TripResponse {
 
-
     public record TripInfo(
-
-            @NotNull
+            @Positive
             @Schema(name = "여행 id", example = "4")
             Long tripId,
-
-
             @NotNull
             @Schema(name = "여행 이름", example = "강원도 여행")
             String tripName,
-
             @NotNull
             @Schema(name = "여행 날짜", example = "2023-11-11")
-            TimeSchedule timeSchedule,
-
+            TimeScheduleDTO timeSchedule,
             @NotNull
             @Schema(name = "여행 목적지", example = "국내")
             TripDestinationEnum tripDestinationEnum,
-
-            @NotNull LocalDateTime createdAt,
-            @NotNull LocalDateTime updatedAt) {
-
+            @NotNull String createdAt,
+            @NotNull String updatedAt) {
 
         public static TripInfo fromEntity(Trip trip) {
             return new TripInfo(
                     trip.getTripId(),
                     trip.getTripName(),
-                    trip.getTimeSchedule(),
+                    new TimeScheduleDTO(
+                            trip.getTimeSchedule().getStartTime(),
+                            trip.getTimeSchedule().getEndTime(),
+                            true
+                    ),
                     trip.getTripDestinationEnum(),
-                    trip.getCreatedAt(),
-                    trip.getUpdatedAt()
+                    TimeUtils.formatDateTime(trip.getCreatedAt()),
+                    TimeUtils.formatDateTime(trip.getUpdatedAt())
             );
         }
     }
@@ -58,7 +54,7 @@ public class TripResponse {
             List<String> itinerariesNames = trip.getItineraries()
                     .stream()
                     .map(Itinerary::getItineraryName)
-                    .collect(Collectors.toList());
+                    .toList();
 
             return new AllTrips(
                     TripInfo.fromEntity(trip),
